[package]
name = "todo"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
chrono = "0.4.38"
git2 = "0.19.0"
ptree = "0.5.0"
regex = "1.11.0"
walkdir = "2.5.0"
termcolor = "1.4.1"
ignore = { version = "0.4.23", features = ["simd-accel"] }
colored = "2.1.0"

[lints.clippy]
complexity = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
